# Otter-data-collection

./: .gitignore  .gitmodules  README.md  resource_monitor.py  start_recording.yaml  start_sensors.yaml
sensor_ws/src/navtech_driver/cpp/cpp_17/src/: CMakeLists.txt
sensor_ws/src/navtech_driver/cpp/cpp_17/src/apps/: CMakeLists.txt  Cat240_client_main.cpp  Colossus_client_main.cpp  NMEA_client_main.cpp  NMEA_server_main.cpp  Pointcloud_3d_writer_main.cpp  Pointcloud_target_writer_main.cpp  basic_app_framework.cpp  navigation_main.cpp  pointcloud_client_main.cpp  pointcloud_writer_main.cpp  tcp_relay_main.cpp
sensor_ws/src/navtech_driver/cpp/cpp_17/src/cmake/modules/: FindBotan2.cmake  FindLibUSB.cmake  FindSPX.cmake
sensor_ws/src/navtech_driver/cpp/cpp_17/src/navigation/: CFAR_Peak_finder.cpp  CFAR_Peak_finder.h  CMakeLists.txt  Cartesian_target.cpp  Cartesian_target.h  Euclidean_target.cpp  Euclidean_target.h  Peak_finder.cpp  Peak_finder.h  Polar_target.cpp  Polar_target.h  Sector_blanking.cpp  Sector_blanking.h  Spherical_target.cpp  Spherical_target.h  Vector_maths.h  navigation_defs.h
sensor_ws/src/navtech_driver/cpp/cpp_17/src/network/: CMakeLists.txt
sensor_ws/src/navtech_driver/cpp/cpp_17/src/network/core/clients/: Datagram_client.h  Datagram_client_traits.h  Message_dispatchers.h  Stream_client.h  Stream_client_traits.h
sensor_ws/src/navtech_driver/cpp/cpp_17/src/network/core/connections/: Connection_error_events.h  Connection_manager.h  Connection_manager_traits.h  Connection_set.h  Connection_traits.h
sensor_ws/src/navtech_driver/cpp/cpp_17/src/network/core/event_handling/: Event_traits.h
sensor_ws/src/navtech_driver/cpp/cpp_17/src/network/core/sdk/: sdk.cpp  sdk.h
sensor_ws/src/navtech_driver/cpp/cpp_17/src/network/core/servers/: Acceptor.h  Datagram_server.h  Datagram_server_traits.h  Stream_server.h  Stream_server_traits.h
sensor_ws/src/navtech_driver/cpp/cpp_17/src/network/core/sockets/: Socket.cpp  Socket.h  TCP_socket.cpp  TCP_socket.h  UDP_socket.cpp  UDP_socket.h  socket_exceptions.h  transport_traits.h
sensor_ws/src/navtech_driver/cpp/cpp_17/src/network/protocols/: Protocol_traits.h
sensor_ws/src/navtech_driver/cpp/cpp_17/src/network/protocols/CAT_240/: Cat240_protocol.h  Cat240_protocol_traits.h
sensor_ws/src/navtech_driver/cpp/cpp_17/src/network/protocols/CP/: CP_protocol.h  CP_protocol_traits.h
sensor_ws/src/navtech_driver/cpp/cpp_17/src/network/protocols/Colossus/: Colossus_protocol.h  Colossus_protocol_traits.h  README.md
sensor_ws/src/navtech_driver/cpp/cpp_17/src/network/protocols/NMEA/: NMEA_protocol_traits.h
sensor_ws/src/navtech_driver/cpp/cpp_17/src/network/tls/: CMakeLists.txt  TLS_config.cpp  TLS_config.h  TLS_traits.h
sensor_ws/src/navtech_driver/cpp/cpp_17/src/network/tls/botan/: Botan_TLS_server.cpp  Botan_TLS_server.h  Botan_TLS_services.cpp  Botan_TLS_services.h  Botan_certificate_file.cpp  Botan_certificate_file.h  Botan_credentials_manager.cpp  Botan_credentials_manager.h  Botan_key_file.cpp  Botan_key_file.h  Botan_policy.cpp  Botan_policy.h  Botan_server_credentials_manager.cpp  Botan_server_credentials_manager.h
sensor_ws/src/navtech_driver/cpp/cpp_17/src/network/tls/null/: Null_TLS_engine.cpp  Null_TLS_engine.h  Null_TLS_services.cpp  Null_TLS_services.h
sensor_ws/src/navtech_driver/cpp/cpp_17/src/network/utilities/: Endian.h  Endpoint.h  IP_address.cpp  IP_address.h  MAC_address.cpp  MAC_address.h  Message_buffer.h  Network_port.h  net_conversion.cpp  net_conversion.h
sensor_ws/src/navtech_driver/cpp/cpp_17/src/protobuf/: CMakeLists.txt  configurationdata.proto  discovery.proto  health.proto  healthinfo.proto  networkinfo.proto  nvramcontents.proto  radarmodel.proto  softwareversions.proto  tls.proto
sensor_ws/src/navtech_driver/cpp/cpp_17/src/utility/: CMakeLists.txt
sensor_ws/src/navtech_driver/cpp/cpp_17/src/utility/architecture/: Event_dispatcher.h  pointer_types.h
sensor_ws/src/navtech_driver/cpp/cpp_17/src/utility/containers/: Circular_buffer.h  FIFO.h  Heap_array.h  Port.h  Vector_view.h
sensor_ws/src/navtech_driver/cpp/cpp_17/src/utility/geometry/: Cartesian_coordinate.cpp  Cartesian_coordinate.h  Degrees.h  Euclidean_coordinate.cpp  Euclidean_coordinate.h  Polar_coordinate.cpp  Polar_coordinate.h  Radians.h  Shape_finder.h  Spherical_coordinate.cpp  Spherical_coordinate.h
sensor_ws/src/navtech_driver/cpp/cpp_17/src/utility/math/: CFAR_algorithms.h  Centre_of_mass.h  Percentage.h  Statistical_value.h  float_equality.h
sensor_ws/src/navtech_driver/cpp/cpp_17/src/utility/protobuf/: Protobuf_helpers.h
sensor_ws/src/navtech_driver/cpp/cpp_17/src/utility/radar_client/: File_writer.h  Message_writer.h
sensor_ws/src/navtech_driver/cpp/cpp_17/src/utility/security/: CRC_generator.h
sensor_ws/src/navtech_driver/cpp/cpp_17/src/utility/string/: string_helpers.h
sensor_ws/src/navtech_driver/cpp/cpp_17/src/utility/system/: Log.cpp  Log.h  Option_parser.cpp  Option_parser.h  Signal_handler.cpp  Signal_handler.h
sensor_ws/src/navtech_driver/cpp/cpp_17/src/utility/threading/: Active.cpp  Active.h  Bit_ops.h  Flag_set.h  Mutex.cpp  Mutex.h
sensor_ws/src/navtech_driver/cpp/cpp_17/src/utility/time/: Polled_timeout.h  Stopwatch.h  Threadsafe_queue.h  Time_utils.cpp  Time_utils.h  Timer.cpp  Timer.h
sensor_ws/src/navtech_driver/cpp/cpp_17/src/utility/units/: Memory_types.h  Units.h  constants.h  uint24_t.h
sensor_ws/src/navtech_driver/ros/ros2/src/nav_radar/: CMakeLists.txt  README.md  package.xml
sensor_ws/src/navtech_driver/ros/ros2/src/nav_radar/config/: b_scan_extended_publisher.yaml  b_scan_extended_subscriber.yaml  b_scan_publisher.yaml  cfar_point_cloud_publisher.yaml  colossus_and_camera_publisher.yaml  colossus_publisher.yaml  colossus_subscriber.yaml  laser_scan_publisher.yaml  native_point_cloud_publisher.yaml  navigation_mode_point_cloud_publisher.yaml  point_cloud_publisher.yaml
sensor_ws/src/navtech_driver/ros/ros2/src/nav_radar/src/publishers/: b_scan_extended_publisher.cpp  b_scan_extended_publisher.h  b_scan_extended_publisher_main.cpp  b_scan_publisher.cpp  (+29 more)
(+281 files in other folders)
